--- a/trunk/megamek/l10n/megamek/client/messages.properties
+++ b/trunk/megamek/l10n/megamek/client/messages.properties
@@ -397,6 +397,7 @@ CommonMenuBar.fileBoardSaveAs=Save As...
 CommonMenuBar.fileBoardSaveAsImage=Save As Image...
 CommonMenuBar.fileGameConnect=Connect...
 CommonMenuBar.fileGameConnectBot=Connect as Bot...
+CommonMenuBar.replacePlayer=Replace Player...
 CommonMenuBar.fileGameNew=New
 CommonMenuBar.fileGameOpen=Open...
 CommonMenuBar.fileGameSave=Save Locally...
@@ -2218,6 +2219,7 @@ LosEffects.name_cover_unknown=unknown
 BotConfigDialog.title=Configure Bot
 BotConfigDialog.testBotRadioButton=TestBot
 BotConfigDialog.princessRadioButton=PrincessBot
+BotConfigDialog.replacePlayerLabel=Replace:
 BotConfigDialog.nameLabel=Name:
 BotConfigDialog.namefield.default=Princess
 BotConfigDialog.namefield.tooltip=The name of the bot player.  Must be unique.
