--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -106,6 +106,7 @@ v0.39.3-dev (SVN)
     necessary and does not have the ability to replace multiple players simultaneously.
 + Bug [#3696]: Princess Does Not Understand Torso-Mounted Cockpits
 + Bug [#4332]: ECM causes illegal state exception
++ Bug [#4328]: Jump platoon unable to flee off the map despite being at map edge
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
