--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -110,6 +110,7 @@ v0.39.3-dev (SVN)
 + Bug [#4160]: startup.sh should handle new versions of megamek better
 + Data: New Images and Unit Fixes.
 + Bug: BA standard armor cannot be selected
+- Removed hidden directories from startup.sh script
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
