--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -111,6 +111,7 @@ v0.39.3-dev (SVN)
 + Data: New Images and Unit Fixes.
 + Bug: BA standard armor cannot be selected
 - Removed hidden directories from startup.sh script
++ Bug [#4326]: Load/Unload buttons always enabled during deployment
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
