--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -116,6 +116,7 @@ v0.39.3-dev (SVN)
 + Bug [#4344]: Stiletto image file missing from megamek
 + Bug MML Ammo Costs wrong.
 + Bug [#4342]: Dropship unable to lift off (under specific circumstances)
++ Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
