--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -117,6 +117,7 @@ v0.39.3-dev (SVN)
 + Bug MML Ammo Costs wrong.
 + Bug [#4342]: Dropship unable to lift off (under specific circumstances)
 + Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
++ Bug [#4341]: BA cannot mount on omni vehicles in the lobby
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
