--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -119,6 +119,7 @@ v0.39.3-dev (SVN)
 + Bug: ComputeECM.computeAllEntitiesECMInfo could NPE in some circumstances
 + Bug [#4341]: BA cannot mount on omni vehicles in the lobby
 + Bug [#4347]: Unofficial rule : Unjam ultra ACs does not work for ASFs
++ Bug [#4350]: Princess Does Not Release CPU When 'Kicked' in Windows Client
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
