--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -123,6 +123,7 @@ v0.39.3-dev (SVN)
 + Bug [#4348]: Unloading BA in the deployment phase is bugged
 + Data: New images and tons of RAT fixes
 + Bug [MML#141]: Long Tom Availablity Bugged by Year
++ Bug [#4339]: Dropship's 'Save Unit List' MUL File Error
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
