--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -5,6 +5,7 @@ v0.39.4-dev / v0.40.0RC2 (SVN)
 + Bug [#4355]: ASFs are unable to strafe hexes with friendly ASFs
 + Bots will now issue /allowTeamChange in response to /joinTeam requests
 + Updated Server messages for /allowTeamChange to make it clear who voted
++ Bug: Extreme range rule check box was disabled in game options dialog
 
 v0.39.3 / v.0.40.0RC1 (2014-12-05 2:40 GMT)
 + Bug [#4260]: Strafing: can designate the same hex twice
