--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -1,5 +1,7 @@
 VERSION HISTORY:
 ----------------
+v0.39.6 / v0.40.0RC4 (SVN)
+
 v0.39.5 / v0.40.0RC3 (2014-12-25 15:10 UTC)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
     This was causing bugs in MekHQ, such as not registering kills properly
