--- a/trunk/megamek/l10n/megamek/common/report-messages.properties
+++ b/trunk/megamek/l10n/megamek/common/report-messages.properties
@@ -190,6 +190,8 @@
 2445=<data> (<data>) sinks into the quicksand.
 
 3000=<newline><B>Weapon Attack Phase</B><newline>-------------------
+3003=Inferno fire (bombs) started in hex <data>.
+3004=Inferno fire (Arrow IV) started in hex <data>.
 3005=Fire started in hex <data>.
 3006=Inferno fire started in hex <data>.
 3007=You cannot start a fire in a <data>.
