--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -4,8 +4,9 @@ v0.39.6 / v0.40.0RC4 (SVN)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
 + Bug: NPE in Precognition.getECMInfo when using /replacePlayer
 + Bug: Crossbow Prime isn't showing image
-+ Bug: Some weapon data and use fixes.
-+ Data: New Unit images.
++ Bug: Some weapon data and use fixes
++ Data: New Unit images
++ Bug: Vehicular Stealth was trying to allocate 2 items that each take 2 slots, instead of 2*1
 
 v0.39.5 / v0.40.0RC3 (2014-12-25 15:10 UTC)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
