--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.39.6 / v0.40.0RC4 (SVN)
 + Bug [#4399]: Translation Properties file in UTF-8 read wrong
     Also, replaced unreadable Russian character code with the actual word in the .properties files
 + Bug [#4398]: APMs cannot be selected in UnitDisplay Weapons tab
++ Changes for MegaMekLab Bug 139
 
 v0.39.5 / v0.40.0RC3 (2014-12-25 15:10 UTC)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
