--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -21,6 +21,7 @@ v0.39.6 / v0.40.0RC4 (SVN)
 + Bug [#4398]: APMs cannot be selected in UnitDisplay Weapons tab
 + Changes for MegaMekLab Bug 139
 + Changes for MegaMekLab Bug 95
++ Refactor some class names to change 'Mech' to 'Unit' since they apply to all units
 
 v0.39.5 / v0.40.0RC3 (2014-12-25 15:10 UTC)
 + Bug: GameVictoryEvent was not adding "Out of Game" entities to the entityIds hashtable
