--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -1,10 +1,15 @@
 VERSION HISTORY:
 ----------------
+
 v0.41.0-dev (SVN)
 + Bug [#4397]: Option for year is short a character
 + Feature [#1327]: Changing the firing text for swarming attacks
 + Feature [#1342]: Unjam RAC button should display a warning that it will end
     movement for the turn
++ Bug [#4129]: double blind sensor detection should only reveal a radar blip,
+    not whole unit
++ Bug [#4404]: Performance issues with BoardView1.createShadowMask
++ Bug [#4405]: rendering loop could be greatly sped up with caching hex images
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
