--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -11,6 +11,7 @@ v0.41.0-dev (SVN)
 + Bug [#4404]: Performance issues with BoardView1.createShadowMask
 + Bug [#4405]: rendering loop could be greatly sped up with caching hex images
 + Bug [#4401]: Unit Damage Editor dialog only allows equipment to be damaged
++ Bug: MechTileset quietly creates entries for files that don't exist
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
