--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -14,6 +14,7 @@ v0.41.0-dev (SVN)
 + Bug: MechTileset quietly creates entries for files that don't exist
 + Data: New Images/RAT Fixes/Other small data fixes
 + Bug [#4407]: Missing King Davids
++ Bug [#4406]: Dropship causes targeting range to be one
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
