--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -15,6 +15,8 @@ v0.41.0-dev (SVN)
 + Data: New Images/RAT Fixes/Other small data fixes
 + Bug [#4407]: Missing King Davids
 + Bug [#4406]: Dropship causes targeting range to be one
++ Bug [#4408]: Client drawing of ECM effects is incorrect
++ Feature [#1344]: Highlight hexes with enemy ECM units
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
