--- a/trunk/megamek/i18n/megamek/client/messages.properties
+++ b/trunk/megamek/i18n/megamek/client/messages.properties
@@ -101,6 +101,8 @@ BoardView1.Conventional=Conv (
 BoardView1.DEPTH=DEPTH 
 BoardView1.detonated=detonated (
 BoardView1.DFA=DFA. Needs {0}
+BoardView1.ecmSource=ECM Source
+BoardView1.eccmSource=ECCM Source
 BoardView1.Evade=\ (Evade)
 BoardView1.flare=Flare, burning for {0} more turns
 BoardView1.Roll=Roll
