--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -17,6 +17,7 @@ v0.41.0-dev (SVN)
 + Bug [#4406]: Dropship causes targeting range to be one
 + Bug [#4408]: Client drawing of ECM effects is incorrect
 + Feature [#1344]: Highlight hexes with enemy ECM units
++ Bug: Movement envelope highlighting not cleared when Done is clicked
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
