--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -19,6 +19,7 @@ v0.41.0-dev (SVN)
 + Feature [#1344]: Highlight hexes with enemy ECM units
 + Bug: Movement envelope highlighting not cleared when Done is clicked
 + Bug: Entity may not be selected for Deployment under certain circumstances
++ Bug: Added missing i18n entry for sensors_detect_all
 
 v0.40.0 (2015-01-01 20:40 UTC)
 + Bug [#4372]: Inferno Bomb/IV fires do not last the proper duration
